tests/type_errors/mutability.xs
let x = 5
x = 10
println("should not reach")
